--- a/styles/style.css
+++ b/styles/style.css
@@ -25,22 +25,24 @@ hr {
 .header-section {
   display: flex;
   justify-content: space-between;
-  height: 94px;
+  height: 80px;
   background-color: #562eff;
   color: #ffff;
 }
 .header-left {
   text-align: center;
   margin-top: 15px;
-  margin-left: 400px;
+  margin-left: 270px;
 }
 .header-left h4 {
   margin-top: 0;
   padding: 0;
+  font-weight: 500;
+  font-size: 15px;
 }
 .icon img {
-  width: 35px;
-  height: 41px;
+  width: 25px;
+  height: 30px;
   margin-bottom: 0;
   padding: 0;
 }
@@ -48,7 +50,7 @@ hr {
 .header-right {
   display: flex;
   align-items: center;
-  margin-right: 400px;
+  margin-right: 270px;
 }
 .navbar ul {
   display: flex;
@@ -60,13 +62,13 @@ hr {
   text-decoration: none;
   margin-right: 30px;
   color: #ffff;
-  font-size: 22px;
+  font-size: 20px;
   padding: 20px;
 }
 
 .profile img {
-  width: 55px;
-  height: 55px;
+  width: 45px;
+  height: 45px;
 }
 
 /* ---------------------------------------------------- */
@@ -79,7 +81,7 @@ hr {
 }
 .container {
   background-color: #ffffff;
-  width: 1630px;
+  width: 1370px;
   padding: 36px;
   border-radius: 5px;
   margin-top: 22px;
@@ -201,7 +203,7 @@ margin-right: 25px;
 background-color: #FFE4E8;
 border-radius: 50px;
 color: #FF4A60;
-padding: 2px 6px;
+padding: 2px 7px;
 }
 .fa-chevron-circle-right{
     font-size: 60px;
@@ -218,7 +220,7 @@ padding: 2px 6px;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 70px;
+    height: 60px;
     background-color: #562eff;
     color: #ffff;
 }
